# ravr

./: .env.template  .gitignore  .npmrc  .vercelignore  AI_MODELS_CDN_COMPLETE.md  ANDROID_COMPLETE_SUMMARY.md  ANDROID_CONNECTION_GUIDE.md  ANDROID_FEATURES.md  ANDROID_IMPLEMENTATION_COMPLETE.md  ANDROID_QUICKSTART.md  ANDROID_SETUP.md  ARCHITECTURE.md  AUTO_SCAN_LIBRARY_COMPLETE.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS_WINDOWS.md  BULK_TRACK_DETECTION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CONTRIBUTING.md  ELECTRON_FIXES_COMPLETE.md  EUPH_CODEC_COMPLETE.md  EUPH_DSP_STATUS.md  FIXES_SUMMARY.md  ICON_GENERATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROMPT_OPUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_EXAMPLE.md  LICENSE  MEMORY_SYSTEM.md  MOBILE_DEPLOYMENT.md  MOBILE_READY.md  PROFESSIONAL_UPGRADE_PLAN.md  PRO_FEATURES.md  Player Feature Upgrades Discussion.md  RAVR_CLAUDE_TASK.md  RAVR_PROJECT_GUIDE.md  README.md  (+50 more)
android/: .gitignore  BUILD_INSTRUCTIONS.md  build.gradle  gradle.properties
docs/: API.md  README.md  UPGRADE_COMPLETE.md  VST-PLUGINS.md  euph-format-spec.md  implementation-roadmap.md
electron/: main.js
public/: PresetManager.tsx  playlist.json  wasm-dsp-processor.js
ravr-py/: _windows.py  ai_model_preparation.py  scripts.py  specifiers.py
samples/: example.euph.json
scripts/: convert-models-to-onnx.py  deploy-android.ps1  download-ai-models.py  generate-icons.ps1
src/: App.css  App.tsx  App.tsx.bak  index.css  main.tsx  setupTests.ts  useAudioPlayer.ts
src-rust/: Cargo.toml
src-rust/src/: ai_enhancement.rs  dsp_engine.rs  euph_decoder.rs  euph_encoder.rs  lib.rs  relativistic_effects.rs
src-tauri/: tauri.conf.json
src/wasm/: Cargo.toml  ravr_wasm.d.ts  ravr_wasm.js  ravr_wasm_bg.wasm  ravr_wasm_bg.wasm.d.ts
src/wasm/src/: lib.rs
tools/: ravr-py
(+316 files in other folders)
