[package]
name = "ravr-wasm"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# WASM bindings
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
  "console",
  "AudioContext",
  "AudioBuffer",
  "AudioNode",
  "AudioParam",
  "GainNode",
  "BiquadFilterNode",
  "AnalyserNode",
  "ScriptProcessorNode",
  "AudioWorkletNode",
  "FileReader",
  "Blob",
  "File",
  "Response",
  "Request",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# EUPH format dependencies
crc32fast = "1.3"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

# WASM-specific optimizations
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]
